--- a/templates/deploy-azure-webapp-container.json
+++ b/templates/deploy-azure-webapp-container.json
@@ -72,7 +72,7 @@
         {
             "type": "Microsoft.Web/sites/hostNameBindings",
             "apiVersion": "2018-11-01",
-            "name": "[concat(parameters('siteName'),'/',parameters('siteName'),'.azurewebsites.net)]",
+            "name": "[concat(parameters('siteName'),'/',parameters('siteName'),'.azurewebsites.net')]",
             "location": "[resourceGroup().location]",
             "dependsOn": [
                 "[resourceId('Microsoft.Web/sites', parameters('siteName'))]"
